--- a/backend/OutlayManager/appsettings.Development.json
+++ b/backend/OutlayManager/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+
+    "OutlayManagerDatabase": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Polyglot;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
   }
 }
