--- a/backend/OutlayManager.Common/OutlayManager.Common.csproj
+++ b/backend/OutlayManager.Common/OutlayManager.Common.csproj
@@ -8,4 +8,10 @@
     <Folder Include="DTOs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+  </ItemGroup>
+
 </Project>
