--- a/backend/OutlayManager/OutlayManager.csproj
+++ b/backend/OutlayManager/OutlayManager.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OutlayManager.BusinessLogic\OutlayManager.BusinessLogic.csproj" />
+    <ProjectReference Include="..\OutlayManager.Common\OutlayManager.Common.csproj" />
+    <ProjectReference Include="..\OutlayManager.DataAccess\OutlayManager.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
