--- a/backend/OutlayManager/appsettings.json
+++ b/backend/OutlayManager/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "OutlayManagerDatabase": "Data Source=SQL6003.site4now.net;Initial Catalog=DB_A45CE2_NachtReiter;User Id=DB_A45CE2_NachtReiter_admin;Password=vcxzasdf;"
+
+
+  }
 }
